# branchbox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
branchbox/: Dockerfile  __init__.py  __main__.py  cli.py  container.py  git_ops.py  utils.py
